--- a/index.html
+++ b/index.html
@@ -1,12 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <div><h1 style="color: black ;background-color: aqua;border-radius:  30px;text-align:center;">Cascading Style Sheets <b style="background-color :black; color: yellow; border: 2px solid red;border-radius: ;">css</b></h1></div>
-    
-</body>
+    <link rel="stylesheet" href="./style.css">
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="heading"><span class="cont">Container</span> and Flexbox</h1>
+      <div class="navbar">
+        <span>Logo</span>
+        <a href="/">Justify-content:center</a>
+        <a href="/">Justify-content:center</a>
+        <a href="/">Justify-content:center</a>
+      </div>
+
+      <div class="card-ota">
+        <div class="card">
+          <div class="card-img">
+            <img src="./Rectangle 7 (1).png" alt="" />
+          </div>
+          <div class="card-body">
+            <h2>FlexBox</h2>
+            <p>
+              Flexbox — container’ni joylashtirishda muhim vosita hisoblanib,
+              uning yordamida bir nechta qulayliklarga ega bo’lishimiz mumkin
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-img">
+            <img src="./Rectangle 7 (1).png" alt="" />
+          </div>
+          <div class="card-body">
+            <h2>FlexBox</h2>
+            <p>
+              Flexbox — container’ni joylashtirishda muhim vosita hisoblanib,
+              uning yordamida bir nechta qulayliklarga ega bo’lishimiz mumkin
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-img">
+            <img src="./Rectangle 7 (1).png" alt="" />
+          </div>
+          <div class="card-body">
+            <h2>FlexBox</h2>
+            <p>
+              Flexbox — container’ni joylashtirishda muhim vosita hisoblanib,
+              uning yordamida bir nechta qulayliklarga ega bo’lishimiz mumkin
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-img">
+            <img src="./Rectangle 7 (1).png" alt="" />
+          </div>
+          <div class="card-body">
+            <h2>FlexBox</h2>
+            <p>
+              Flexbox — container’ni joylashtirishda muhim vosita hisoblanib,
+              uning yordamida bir nechta qulayliklarga ega bo’lishimiz mumkin
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-img">
+            <img src="./Rectangle 7 (1).png" alt="" />
+          </div>
+          <div class="card-body">
+            <h2>FlexBox</h2>
+            <p>
+              Flexbox — container’ni joylashtirishda muhim vosita hisoblanib,
+              uning yordamida bir nechta qulayliklarga ega bo’lishimiz mumkin
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-img">
+            <img src="./Rectangle 7 (1).png" alt="" />
+          </div>
+          <div class="card-body">
+            <h2>FlexBox</h2>
+            <p>
+              Flexbox — container’ni joylashtirishda muhim vosita hisoblanib,
+              uning yordamida bir nechta qulayliklarga ega bo’lishimiz mumkin
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
