--- a/index.html
+++ b/index.html
@@ -1,95 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
-  </head>
-  <body>
-    <div class="container">
-      <h1 class="heading"><span class="cont">Container</span> and Flexbox</h1>
-      <div class="navbar">
-        <span>Logo</span>
-        <a href="/">Justify-content:center</a>
-        <a href="/">Justify-content:center</a>
-        <a href="/">Justify-content:center</a>
-      </div>
+<html lang="ru">
 
-      <div class="card-ota">
-        <div class="card">
-          <div class="card-img">
-            <img src="./Rectangle 7 (1).png" alt="" />
-          </div>
-          <div class="card-body">
-            <h2>FlexBox</h2>
-            <p>
-              Flexbox — container’ni joylashtirishda muhim vosita hisoblanib,
-              uning yordamida bir nechta qulayliklarga ega bo’lishimiz mumkin
-            </p>
-          </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FlexBox</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
+    <div class="container">
+        <div class="buttons">
+            <div>Display: flex;</div>
+            <div>Display: none;</div>
+            <div>Display: block;</div>
+            <div>Display: inline;</div>
         </div>
-        <div class="card">
-          <div class="card-img">
-            <img src="./Rectangle 7 (1).png" alt="" />
-          </div>
-          <div class="card-body">
-            <h2>FlexBox</h2>
-            <p>
-              Flexbox — container’ni joylashtirishda muhim vosita hisoblanib,
-              uning yordamida bir nechta qulayliklarga ega bo’lishimiz mumkin
-            </p>
-          </div>
+        <div class="content">
+            <div class="block">
+                <img src="https://media2.dev.to/dynamic/image/width=160,height=90,fit=cover,gravity=auto,format=auto/https://dev-to-uploads.s3.amazonaws.com/i/mjb5mlnqxrplaumeq0lm.jpg"
+                    alt="Flexbox">
+            </div>
+            <div class="block">
+                <img src="iframe width=853" height="480" src="https://www.youtube.com/embed/phWxA89Dy94"
+                    title="Learn Flexbox CSS in 8 minutes" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen alt="FlexBox"></iframe>
+            </div>
         </div>
-        <div class="card">
-          <div class="card-img">
-            <img src="./Rectangle 7 (1).png" alt="" />
-          </div>
-          <div class="card-body">
-            <h2>FlexBox</h2>
-            <p>
-              Flexbox — container’ni joylashtirishda muhim vosita hisoblanib,
-              uning yordamida bir nechta qulayliklarga ega bo’lishimiz mumkin
-            </p>
-          </div>
+        <div class="title">
+            <h1>FlexBox</h1>
         </div>
-        <div class="card">
-          <div class="card-img">
-            <img src="./Rectangle 7 (1).png" alt="" />
-          </div>
-          <div class="card-body">
-            <h2>FlexBox</h2>
-            <p>
-              Flexbox — container’ni joylashtirishda muhim vosita hisoblanib,
-              uning yordamida bir nechta qulayliklarga ega bo’lishimiz mumkin
-            </p>
-          </div>
+        <div class="content">
+            <div class="description">
+                <p>CSS Flexbox — это технология для создания сложных гибких макетов за счёт правильного размещения
+                    элементов на странице.</p>
+            </div>
+            <div class="description">
+                <p>Flexbox, veb dizayn jarayonini soddalashadi va elementlarni dinamik tarzda joylashtirishni
+                    boshqarishga yordam beradi.</p>
+            </div>
         </div>
-        <div class="card">
-          <div class="card-img">
-            <img src="./Rectangle 7 (1).png" alt="" />
-          </div>
-          <div class="card-body">
-            <h2>FlexBox</h2>
-            <p>
-              Flexbox — container’ni joylashtirishda muhim vosita hisoblanib,
-              uning yordamida bir nechta qulayliklarga ega bo’lishimiz mumkin
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-img">
-            <img src="./Rectangle 7 (1).png" alt="" />
-          </div>
-          <div class="card-body">
-            <h2>FlexBox</h2>
-            <p>
-              Flexbox — container’ni joylashtirishda muhim vosita hisoblanib,
-              uning yordamida bir nechta qulayliklarga ega bo’lishimiz mumkin
-            </p>
-          </div>
-        </div>
-      </div>
     </div>
-  </body>
+</body>
+
 </html>
