--- a/index.html
+++ b/index.html
@@ -1,47 +1,17 @@
 <!DOCTYPE html>
-<html lang="ru">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlexBox</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./style.css">
+    
 </head>
-
 <body>
-    <div class="container">
-        <div class="buttons">
-            <div>Display: flex;</div>
-            <div>Display: none;</div>
-            <div>Display: block;</div>
-            <div>Display: inline;</div>
-        </div>
-        <div class="content">
-            <div class="block">
-                <img src="https://media2.dev.to/dynamic/image/width=160,height=90,fit=cover,gravity=auto,format=auto/https://dev-to-uploads.s3.amazonaws.com/i/mjb5mlnqxrplaumeq0lm.jpg"
-                    alt="Flexbox">
-            </div>
-            <div class="block">
-                <img src="iframe width=853" height="480" src="https://www.youtube.com/embed/phWxA89Dy94"
-                    title="Learn Flexbox CSS in 8 minutes" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen alt="FlexBox"></iframe>
-            </div>
-        </div>
-        <div class="title">
-            <h1>FlexBox</h1>
-        </div>
-        <div class="content">
-            <div class="description">
-                <p>CSS Flexbox — это технология для создания сложных гибких макетов за счёт правильного размещения
-                    элементов на странице.</p>
-            </div>
-            <div class="description">
-                <p>Flexbox, veb dizayn jarayonini soddalashadi va elementlarni dinamik tarzda joylashtirishni
-                    boshqarishga yordam beradi.</p>
-            </div>
-        </div>
-    </div>
-</body>
+   <marquee behavior="" direction="">
 
+    <h1>Hello World</h1>
+    <P>Hi My name is Saidbek</P>
+</marquee>
+</body>
 </html>
