--- a/index.html
+++ b/index.html
@@ -4,14 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
-    
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-   <marquee behavior="" direction="">
+    <div>
+    <div class="navbar">
+        <div class="container">
+            <div class="wrapper">
+                <img src="./image 4.png" alt="">
+                <ul>
+                    <li>
+                        <a href="">Game info</a>
+                    </li>
+                    <li>
+                        <a href="">News</a>
+                    </li>
+                    <li>
+                        <a href="">Media</a>
+                    </li>
+                    <li>
+                        <a href="">Communitiy</a>
+                    </li>
+                    <li>
+                        <a href="">Support</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+   
 
-    <h1>Hello World</h1>
-    <P>Hi My name is Saidbek</P>
-</marquee>
+
+    <button>
+        <p>ERANGEL CLASSIC RETURNS</p>
+    </button>
+    </div>
 </body>
 </html>
